downloaded pics to img

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
   <html>
     <head>
         <title>Wonderful Mike</title>
+        <link href="css/style.css" rel="stylesheet" media="all">
         <link href="https://fonts.googleapis.com/css?family=Abel|Montserrat|Patua+One"
          rel="stylesheet">
-         <link href="css/stylesheet" rel="stylesheet" media="all">
+         /*font-family: 'Abel', sans-serif;
+         font-family: 'Patua One', cursive;
+         font-family: 'Montserrat', sans-serif*/
+
          <style type="text/css">
 
         <body>
+
+      <div class="bg-image">
+
+        </div>
         </body>
     </head>
   </html>
