added classes to the html

--- a/index.html
+++ b/index.html
@@ -5,15 +5,10 @@
         <link href="css/style.css" rel="stylesheet" media="all">
         <link href="https://fonts.googleapis.com/css?family=Abel|Montserrat|Patua+One"
          rel="stylesheet">
-         /*font-family: 'Abel', sans-serif;
-         font-family: 'Patua One', cursive;
-         font-family: 'Montserrat', sans-serif*/
-
-         <style type="text/css">
 
         <body>
 
-      <div class="bg-image">
+      <div class="bg-image"
 
         </div>
         </body>
