added div id for image giraffe

--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
          rel="stylesheet">
 
         <body>
-
-      <div class="bg-image"
-
-        </div>
+          <div id="bg-image">
+            <div id=bg-imageoverlay></div>
+          </div>
         </body>
     </head>
   </html>
