deleted the google fonts link, i think its messing with the rest of the work

--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
   <html>
     <head>
         <title>Wonderful Mike</title>
-        <link href="css/style.css" rel="stylesheet" media="all">
-        <link href="https://fonts.googleapis.com/css?family=Abel|Montserrat|Patua+One"
-         rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
 
         <body>
           <div id="bg-image">
             <div id=bg-imageoverlay></div>
           </div>
         </body>
+
     </head>
   </html>
