--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <link href="css/style.css" rel="stylesheet">
 
         <body>
-          <div id="bg-image">
-            <div id=bg-imageoverlay></div>
+          <div class="bg-image">
+            <div class=bg-imageoverlay></div>
           </div>
         </body>
 
