--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="css/style.css" rel="stylesheet">
 
         <body>
-          <div class="bg-image">
+          <div class="hero">
             <div class=bg-imageoverlay></div>
           </div>
         </body>
