Finally got the error, mssing ; for the background image to load

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <body>
           <div class="hero">
-            <div class=bg-imageoverlay></div>
+            <div class=hero-imageoverlay></div>
           </div>
         </body>
 
