--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <link href="css/style.css" rel="stylesheet">
 
         <body>
-          <div class="hero">
-            <div class=hero-imageoverlay></div>
+          <div id="hero">
+            <div id=hero-imageoverlay></div>
           </div>
         </body>
 
