--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
     <head>
         <title>Wonderful Mike</title>
         <link href="css/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
         <body>
           <div id="hero">
             <div id=hero-imageoverlay></div>
+            <div class="name">Maina Michael Kimani</div>
+            <div class="projects">Projects Wrought</div>
+            <div class="About">About</div>
+            <div class="footer"></div>
           </div>
         </body>
 
