Added new div class called wrapper plus also tried indenting texts for clean code

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
         <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 
         <body>
-          <div id="hero">
-            <div id=hero-imageoverlay></div>
-            <div class="name">Maina Michael Kimani</div>
-            <div class="projects">Projects Wrought</div>
-            <div class="About">About</div>
-            <div class="footer"></div>
-          </div>
+            <div class="wrapper">
+              <div id="hero">
+                <div id=hero-imageoverlay></div>
+                  <div class="name">Maina Michael Kimani</div>
+                    <div class="projects">Projects Wrought</div>
+                      <div class="About">About</div>
+                        <div class="footer"></div>
+             </div>
+           </div>
         </body>
 
     </head>
