Added new header h1 plus added some css rules to .wrapper

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div class="wrapper">
               <div id="hero">
                 <div id=hero-imageoverlay></div>
-                  <div class="name">Maina Michael Kimani</div>
+                  <div class="name"> <h1>Maina Michael Kimani</h1> </div>
                     <div class="projects">Projects Wrought</div>
                       <div class="About">About</div>
                         <div class="footer"></div>
