Changed background image from giraffes.jpg to almost.jpg

--- a/index.html
+++ b/index.html
@@ -7,12 +7,27 @@
 
         <body>
           <div id="hero">
-                <div id=hero-imageoverlay></div>
-                  <div class="name">Maina Michael Kimani</div>
-                    <div class="navigation">Navigatio</div>
-                    <div class="projects">Projects Wrought</div>
-                      <div class="About">About</div>
-                        <div class="footer"></div>
+                <div id=hero-imageoverlay>
+                  <div class="wrapper">
+                    <div class="heading">
+                      <h1>Portfolio</h1>
+                    </div>
+                    <div class="navigation">
+                        sjkd
+                    </div>
+                    <div class="main-content">
+                      Now Mike is..
+
+                    </div>
+                  </div>
+                  <div class="about-section">
+                    About Section
+                  </div>
+                  <div class="footer">
+                    Mike Wonder creations...
+                  </div>
+                </div>
+          </div>
           </div>
 
         </body>
