I added more css rules to the navigation class

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Wonderful Mike</title>
         <link href="css/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <body>
           <div id="hero">
                 <div id=hero-imageoverlay>
