some slight changes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
                 <div id=hero-imageoverlay>
                   <div class="wrapper">
                     <div class="heading">
-                      <h1>Portfolio</h1>
+                      <h1>MAINA MIKE</h1>
                     </div>
                     <div class="navigation">
-                        sjkd
+                    Home About me Featured by Blog RSS Contact
                     </div>
                     <div class="main-content">
                       Now Mike is..
