Added nav tags to html text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                       <h1>MAINA MIKE</h1>
                     </div>
                     <div class="navigation">
-                    Home About me Featured by Blog RSS Contact
+                    <ul>Home About me Featured by Blog RSS Contact</ul>
                     </div>
                     <div class="main-content">
                       Now Mike is..
