Added ul and li tags to html text

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
                   <div class="wrapper">
                     <div class="heading">
                       <h1>MAINA MIKE</h1>
+                        <nav>
+                          <ul>
+                            <li><a href=""></a></li>
+                            <li><a href=""></a></li>
+                            <li><a href=""></a></li>
+                            <li><a href=""></a></li>
+                            <li><a href=""></a></li> 
+                          </ul>
+                        </nav>
                     </div>
                     <div class="navigation">
                     <ul>Home About me Featured by Blog RSS Contact</ul>
