Deleted the div classes

--- a/index.html
+++ b/index.html
@@ -13,25 +13,14 @@
                       <h1>MAINA MIKE</h1>
                         <nav>
                           <ul>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
-                            <li><a href=""></a></li>
+                            <li><a href="">Portfolio</a></li>
+                            <li><a href="">About Me</a></li>
+                            <li><a href="">Other Stuff</a></li>
+                            <li><a href="">Contacts</a></li>
+                            <li><a href="">Extras</a></li>
                           </ul>
                         </nav>
                     </div>
-                    <div class="main-content">
-                      Now Mike is..
-
-                    </div>
-                  </div>
-                  <div class="about-section">
-                    About Section
-                  </div>
-                  <div class="footer">
-                    Mike Wonder creations...
-                  </div>
                 </div>
           </div>
           </div>
