Just learnt how to add a button, so I just did

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                             <li><a href="">Extras</a></li>
                           </ul>
                         </nav>
+                        <button class="btn">aDios Amigo</button>
                 </div>
           </div>
           </div>
