--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
                   <div class="wrapper">
                     <div class="heading">
                       <h1>MAINA MIKE</h1>
+                      <img src="img/mike.jpg"</img>
                       </div>
                         <nav>
                           <ul>
-                            <li><a href="">Portfolio</a></li>
-                            <li><a href="">About Me</a></li>
-                            <li><a href="">Other Stuff</a></li>
-                            <li><a href="">Contacts</a></li>
-                            <li><a href="">Extras</a></li>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">About Me</a></li>
+                            <li><a href="$">Other Stuff</a></li>
+                            <li><a href="#">Contacts</a></li>
+                            <li><a href="#">Extras</a></li>
                           </ul>
                         </nav>
                         <button class="btn">aDios Amigo</button>
