--- a/index.html
+++ b/index.html
@@ -1,33 +1,46 @@
-<DOCTYPE html>
-  <html>
-    <head>
-        <title>Wonderful Mike</title>
-        <link href="css/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-        <body>
-          <div id="hero">
-                <div id=hero-imageoverlay>
-                  <div class="wrapper">
-                    <div class="heading">
-                      <h1>MAINA MIKE</h1>
-                      <img src="img/mike.jpg"</img>
-                      </div>
-                        <nav>
-                          <ul>
-                            <li><a href="#">Portfolio</a></li>
-                            <li><a href="#">About Me</a></li>
-                            <li><a href="$">Other Stuff</a></li>
-                            <li><a href="#">Contacts</a></li>
-                            <li><a href="#">Extras</a></li>
-                          </ul>
-                        </nav>
-                        <button class="btn">aDios Amigo</button>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Wondeful Mike</title>
+    <link href="css/style1.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Jua|Montserrat|PT+Sans" rel="stylesheet">
+      <body>
+        <div id="hero">
+          <div id="hero-overlay">
+            <div class="wrapper">
+              <div class="name">
+                <h1>Maina Mike Kimani</h1>
+              </div>
+              <div class="navigation">
+                <nav>
+                  <ul>
+                    <li>Portfolio</li>
+                    <li>About Me</li>
+                    <li>Contacts</li>
+                    <li>Extras</li>
+                  </ul>
+                </nav>
+                <div class="moreinfo">
+                  <p>I'm a form 6 vaccist, I've never been gainfully employed but have worked in a
+                  very organised administrative structure so I can say I can manage any managerial task whatsoever because my mind is coded for such</p>
+                  <p>Hey there! This is my landing page and have all the fun you wanna.
+                  Thing is its my first not-so-close-to-a website attempt and it has been really irritating mostly because of small mistakes that
+                can take you over an hour to locate and correct but its has been fun altogether.</p>
+                  <p>I love taking lots of milk, I've always had this desire to gym and become
+                    super mugged.
+                    And for a hobby I'd say I sing, but just because I said I sing does not mean I can actually sing.</p>
+                <div class="content">
+
+                    <div class="footer">
+
+                    </div>
                   </div>
                 </div>
+              </div>
+            </div>
           </div>
+        </div>
+      </body>
 
-        </body>
-
-    </head>
-  </html>
+  </head>
+</html>
