--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <div class="wrapper">
               <div class="name">
                 <h1>Maina Mike Kimani</h1>
+                <img src="img/mike2.jpg"</img>
               </div>
               <div class="navigation">
                 <nav>
