--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Wondeful Mike</title>
     <link href="css/style1.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Abel|Jua|Montserrat|PT+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abel|Jua|Jura|Montserrat|PT+Sans" rel="stylesheet">
       <body>
         <div id="hero">
           <div id="hero-overlay">
@@ -31,6 +31,10 @@
                     super mugged.
                     And for a hobby I'd say I sing, but just because I said I sing does not mean I can actually sing.</p>
                 <div class="content">
+                  <p>I desired to start oun on Moringa school's program beacuse I know it's ust what I need
+                  or lemme say the best way for me to start out on my career path as a software developer-tech mogul.
+                  I mean who knows what a million light years from earth to the closest galaxy to earth would feel like to travel?
+                  There's always has to be a first time for something never done before</p>
 
                     <div class="footer">
 
